# larkwing

./: .gitignore  AGENT.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: release.yml
docs/: ACCEPTANCE-WINDOWS.md  BUILD-WINDOWS.md  smarthome-research.md
larkwing-core/: Cargo.toml
larkwing-core/assets/scenes/: companion.json
larkwing-core/examples/: asr_wav.rs  calib_perf.rs  eval.rs  kws_ab.rs  kws_chunk.rs  kws_probe.rs  kws_replay.rs  smoke.rs  zipvoice_probe.rs
larkwing-core/src/: attach.rs  bus.rs  components.rs  confirm.rs  crypto.rs  datadir.rs  files.rs  lib.rs  net.rs  scenes.rs  scheduler.rs  secrets.rs  tasks.rs  web.rs  webrender.rs
larkwing-core/src/channels/: dingtalk.rs  mod.rs  outbound.rs  render.rs  telegram.rs  weixin.rs
larkwing-core/src/engine/: consolidate.rs  context.rs  diary.rs  mod.rs  title.rs  turn.rs  usage.rs
larkwing-core/src/eval/: grader.rs  mod.rs  scenarios.rs
larkwing-core/src/llm/: anthropic_compat.rs  catalog.rs  fake.rs  gemini.rs  mod.rs  openai_compat.rs  openai_responses.rs  registry.rs  sse.rs
larkwing-core/src/media/: bilibili.rs  cookies.rs  mod.rs  probe.rs  relay.rs  resolver.rs
larkwing-core/src/store/: briefings.rs  channels.rs  chat.rs  cloned_voices.rs  confirms.rs  db.rs  diary.rs  fsops.rs  jobs.rs  media_progress.rs  memory.rs  mod.rs  settings.rs  todos.rs  usage.rs  users.rs  voiceprints.rs
larkwing-core/src/tools/: briefing.rs  desktop.rs  end_conversation.rs  fs.rs  media_control.rs  media_play.rs  media_search.rs  mod.rs  now.rs  pdf.rs  qr.rs  read_image.rs  recall.rs  remember.rs  reminder.rs  send_file.rs  todo.rs  watch.rs  weather.rs  web.rs  web_render.rs
larkwing-core/src/voice/: asr.rs  calib.rs  mod.rs  models.rs  polyphone_supplement.txt  prompts.rs  speaker.rs  tts.rs  wake.rs
larkwing-core/src/weather/: mod.rs  open_meteo.rs  qweather.rs
larkwing-core/tests/: engine.rs
scripts/: bump-version.sh  make-roamer-frames.py
src/: App.vue  i18n.ts  main.ts  style.css
src-tauri/: Cargo.toml  Info.plist  installer-hooks.nsh  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  fullscreen.rs  lib.rs  logkeep.rs  main.rs  nativelog.rs  webrender.rs  winmax.rs
src/components/: AecSpike.vue  ContextMenu.vue  FloatWindow.vue  GreenBackdrop.vue  HologramBackdrop.vue  HudBackdrop.vue  LarkwingMark.vue  MainLayout.vue  NeonBackdrop.vue  NightBackdrop.vue  PetRoamer.vue  PlayerBar.vue  ScifiBackdrop.vue  SkinSelect.vue  StarfieldBackdrop.vue  TasksOverlay.vue  ToastHost.vue  UpdateCard.vue  UsageStrip.vue  VideoOverlay.vue  WarmBackdrop.vue  WindowControls.vue
src/composables/: localAdaptive.ts  useAgentMood.ts  useAudioDecode.ts  useAudioGraph.ts  useBoot.ts  useCharacter.ts  useChat.ts  useConfirm.ts  useContextMenu.ts  useFloat.ts  useFloatIdle.ts  useMedia.ts  useMicBridge.ts  usePageVisible.ts  useRafLoop.ts  useSettings.ts  useSpeech.ts  useTasks.ts  useToast.ts  useUpdater.ts  useVoice.ts  useWakeCalib.ts
src/lib/: backend.ts  clipboard.ts  fmt.ts  md.ts
src/locales/: en.ts  zh-CN.ts
src/views/: ChatView.vue  MemoryView.vue  OpsView.vue  RemindersView.vue  SettingsView.vue
