[package]
name = "larkwing-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
anyhow = "1"
async-trait = "0.1"
# 媒体输入(PLAN §9):文档附件的 base64 解码(图片直接转 data URL,不在 core 解码)
base64 = "0.22"
# 影音转发服务(localhost 流中继):只开 http1+tokio+query,不带宏/多余中间件
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "query"] }
bytes = "1"
bzip2 = "0.5.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cpal = "0.17.1"
# 全局 Ed25519 身份密钥(crypto.rs):和风 JWT 等服务的签名认证。私钥本地存、只产 token 不验,
# JWT 手搓(base64 已在);pkcs8+pem 用于公钥导出 SPKI PEM 给用户复制到服务控制台。
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
futures-util = "0.3"
# crypto 取随机种子生成密钥(直接填 32 字节种子 → SigningKey,省掉整个 rand 依赖)
getrandom = "0.2"
# fs_find 的 glob 匹配(只用 Pattern 匹配器,目录行走自己来——要管深度/隐藏/上限)
glob = "0.3"
msedge-tts = "0.4.0"
pinyin = "0.11.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "socks", "gzip"] }
rusqlite = { version = "0.32", features = ["bundled"] }
# web 工具的 HTML 解析(搜索结果页 + 正文抽取)
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 组件下载的完整性校验(SHA2-256SUMS)
sha2 = "0.10"
sherpa-onnx = "1.13.2"
symphonia = { version = "0.5.5", default-features = false, features = ["mp3"] }
tar = "0.4.46"
thiserror = "1"
# 文件能力 fs_trash:删除走系统回收站(Windows IFileOperation / 各平台原生),可还原
trash = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
# ffmpeg 发行包是 zip(yt-dlp 是裸二进制不经它)
zip = { version = "2", default-features = false, features = ["deflate"] }
