[package]
name = "larkwing"
version.workspace = true
description = "Larkwing — 旺财的桌面版"
authors = ["shenglin"]
license.workspace = true
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
larkwing-core = { path = "../larkwing-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
# 数据目录「搬家」:原生目录选择器(从 Rust 命令侧调,不走 JS 插件命令故无需 capability)。
tauri-plugin-dialog = "2"
# 单实例:已在运行时再点快捷方式不开新进程,把已运行实例唤到前台(Win 真机诉求)。
tauri-plugin-single-instance = "2"
# 一键更新:app 内查清单→签名校验→原地装(Win 装前自动退出 app);走用户代理(check 自带 proxy)。
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
# webrender(隐藏 WebView 窗当 JS 渲染器):实现 core 的 WebRenderer trait 接缝。
async-trait = "0.1"
anyhow = "1"
# 远程渠道监督器:CancellationToken 停旧起新(顶层 spawn 用 tauri runtime,core 不依赖 tauri)。
tokio-util = "0.7"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flate2 = "1"
time = "0.3"
# rustls 0.23 进程级 crypto provider:依赖树里 aws-lc-rs(reqwest)与 ring
# (msedge-tts→rustls-platform-verifier)并存,启动时显式装一个,否则语音合成 panic。
rustls = { version = "0.23", features = ["aws_lc_rs"] }
# 终端 CTRL+C 兜底:GUI/托盘设计下事件循环不理会 SIGINT,开发时进程停不掉。
ctrlc = "3"
# 原生 stderr 落盘(src/nativelog.rs):unix dup2 / Windows UCRT _dup2(libc 两端都带正确 link_name)。
libc = "0.2"
# webrender 截图(工具结果多媒体第一个消费者):抓到的 PNG bytes → data URL。lock 里已有
# (larkwing-core 依赖 base64 0.22),这里补声明才能在壳层用。
base64 = "0.22"

# 前台全屏检测(悬浮窗让位,见 src/fullscreen.rs)+ webrender 截图(WebView2 CapturePreview,
# 见 src/webrender.rs):仅 Windows;复用 Tauri 已拉的 windows 0.61 + webview2-com 0.38
# (版本必须与 tauri 拉入的一致,否则 controller() 类型对不上)。Mac 走 objc2(下方独立块)。
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_System_Com",         # webrender 截图:IStream / STREAM_SEEK_* / ISequentialStream::Read
] }
webview2-com = "0.38"         # webrender 截图:ICoreWebView2::CapturePreview + 完成回调

# webrender 截图(WKWebView.takeSnapshot,见 src/webrender.rs):仅 macOS;objc2 全家 + block2,
# 版本与 lock 里 tauri/wry 已解析的一致(objc2 0.6 / objc2-* 0.3 / block2 0.6),不引入新副本。
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSDictionary", "NSString", "NSError"] }
objc2-app-kit = { version = "0.3", features = ["NSImage", "NSImageRep", "NSBitmapImageRep"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKSnapshotConfiguration", "block2"] }
block2 = "0.6"
